# ucce-ctidriver

./: README.md  ctidriver-binary.cabal  stack.yaml
src/Network/: CceCti.hs
src/Network/CceCti/: BitMask.hs  Enum.hs  FixedPart.hs  FloatElem.hs  FloatElem.txt  FloatPart.hs  MessageRec.hs  Types.hs  genFixedPart.sh  genFloatTable.sh
test/Network/: CceCtiSpec.hs
test/Network/CceCti/: Arbitrary.hs  BitMaskSpec.hs  EnumSpec.hs  FloatPartSpec.hs  MessageSampleSpec.hs  MessageSpec.hs  TypesSpec.hs
