name:                ctidriver-binary
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/ctidriver-binary#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , Network.CceCti
  other-modules:       Network.CceCti.BitMask
                     , Network.CceCti.Enum
                     , Network.CceCti.FixedPart
                     , Network.CceCti.FloatElem
                     , Network.CceCti.FloatPart
                     , Network.CceCti.MessageRec
                     , Network.CceCti.Types
  build-depends:       base >= 4.7 && < 5
                     , binary
                     , bytestring
  default-language:    Haskell2010
  ghc-options:         -O2

executable ctidriver-binary-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -O2 -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , ctidriver-binary
                     , bytestring
  default-language:    Haskell2010

test-suite ctidriver-binary-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , binary
                     , bytestring
                     , hspec
                     , QuickCheck
                     , quickcheck-arbitrary-adt
                     , ctidriver-binary
  ghc-options:         -O2 -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/ctidriver-binary
